BITS-1817: package name fix
Change-Id: Iafe1d4894d71e43db9f3903aaf29fe89c2e20867

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
 }
 
-group = 'buthan'
+group = 'bhutan'
 
 java {
     toolchain {
@@ -60,5 +60,5 @@ test {
 tasks.withType(JavaCompile) {
     options.compilerArgs << '-parameters' << '-Xlint:unchecked'
     options.deprecation = true
-    inputs.file(processResources)
+    inputs.files(processResources)
 }
