--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ configurations {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -35,6 +36,11 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //custom
+    implementation "am.iunetworks:multilingual-core:0.0.1"
+    implementation "am.iunetworks:common-persistence:0.0.1"
+    implementation "am.iunetworks:common-validation:0.0.1"
 }
 
 //Use log4j2 instead logback
