BITS-1818: Eledger config BE - Implement GL account's domain model BITS-1856: Eledger config BE - Implement GL account's persistence model BITS-1950: Eledger config BE - Create tests
Change-Id: Ief160c68919aab3b5bbb26c7c2e5bd7e2700e78a

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -6,18 +6,12 @@ spring:
     username: postgres
     password: postgres
   liquibase:
-    change-log: classpath:db/changelog/changelog.dev.xml
-    clear-checksums: false
+    change-log: classpath:db/changelog/changelog.test.xml
+    clear-checksums: true
     liquibase-schema: migration
   jpa:
     open-in-view: true
 
-server:
-  servlet:
-    context-path: /eledger
-  port: 8086
-
 logging:
   level:
-    root: WARN
-    bhutan.eledger: debug
+    bhutan.eledger: trace
