BITS-2163: Implement hibernate-envers
Change-Id: Ibb211e9abe72bba023cc583a4fa3bec25993f461

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 
     annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jpa"
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+    implementation "org.springframework.data:spring-data-envers"
 }
 
 //Use log4j2 instead logback
