--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -12,6 +12,16 @@ spring:
   jpa:
     open-in-view: true
     show-sql: true
+    properties:
+      org:
+        hibernate:
+          envers:
+            audit_table_suffix: _aud
+            revision_field_name: revision_id
+            revision_type_field_name: rev_type
+            use_revision_entity_with_native_id: false
+            audit_strategy: org.hibernate.envers.strategy.internal.ValidityAuditStrategy
+            audit_strategy_validity_end_rev_field_name: revision_end_id
 
 logging:
   level:
