--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/eledger
     username: postgres
-    password: postgres
+    password: 123456
   liquibase:
     change-log: classpath:db/changelog/changelog.test.xml
     clear-checksums: true
