--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     username: postgres
     password: postgres
   liquibase:
-    change-log: classpath:db/changelog/changelog.dev.xml
+    change-log: classpath:db/changelog/changelog.prod.xml
     clear-checksums: false
-    liquibase-schema: migration
+    liquibase-schema: public
   jpa:
     open-in-view: true
     properties:
