--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 
     annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jpa"
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+    testImplementation 'com.tngtech.archunit:archunit:0.21.0'
 }
 
 //Use log4j2 instead logback
