--- a/deployment/config/application.properties
+++ b/deployment/config/application.properties
@@ -1,5 +1,14 @@
 # external properties to override the default
-logging.file.path=/opt/eledger/log/
+
+server.tomcat.basedir=.
+
+logging.file.name = ./logs/catalina.out
+
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.prefix=access_log
+
 spring.datasource.url=jdbc:postgresql://postgres_db:5432/bu_eledger
 spring.datasource.username: bu_eledger
 spring.datasource.password: thepass
