--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ apply from: 'database.gradle'
 
 dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.data:spring-data-envers'
@@ -52,7 +53,6 @@ dependencies {
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 
     implementation 'com.google.guava:guava:31.0.1-jre'
-    implementation 'com.jsunsoft.http:http-request:2.2.2'
 
     testImplementation 'com.tngtech.archunit:archunit:0.21.0'
 }
@@ -75,10 +75,6 @@ bootRun {
 
 test {
     useJUnitPlatform()
-}
-
-repositories {
-    mavenCentral()
 }
 
 tasks.withType(JavaCompile) {
