--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ apply from: 'database.gradle'
 
 dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.9'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.data:spring-data-envers'
