--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 
     implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'com.jsunsoft.http:http-request:2.2.2'
 
     testImplementation 'com.tngtech.archunit:archunit:0.21.0'
 }
@@ -74,6 +75,10 @@ bootRun {
 
 test {
     useJUnitPlatform()
+}
+
+repositories {
+    mavenCentral()
 }
 
 tasks.withType(JavaCompile) {
