--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,8 @@ logging:
 
 bhutan:
   eledger:
+    fms:
+      uri: http://10.11.1.72:8096
     glaccount:
       search:
         sort-property: code
