--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: eledger
   datasource:
     url: jdbc:postgresql://localhost:5432/eledger
-    username: postgres
-    password: postgres
+    username: eledger
+    password: eledger
   jpa:
     open-in-view: true
     properties:
