--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.postgresql:postgresql'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -55,7 +55,7 @@ dependencies {
     implementation 'com.jsunsoft.http:http-request:2.2.2'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.1.0'
 
-    testImplementation 'com.tngtech.archunit:archunit:0.21.0'
+    testImplementation 'com.tngtech.archunit:archunit:0.22.0'
 
 }
 
