--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,8 @@ bhutan:
     glaccount:
       search:
         sort-property: code
+    schedule:
+      accounting:
+        calculation:
+          cron: "@midnight" #0 0 0 * * *
+
