--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,12 @@ server:
 logging:
   level:
     root: WARN
-    bhutan.eledger: debug
+    bhutan:
+      eledger: debug
+        application:
+          service:
+            eledger:
+              transaction: trace
 
 bhutan:
   eledger:
