Fix logger config
Change-Id: If9d880320930c899724cff2889e552acad1d16ff

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,12 +27,8 @@ server:
 logging:
   level:
     root: WARN
-    bhutan:
-      eledger: debug
-        application:
-          service:
-            eledger:
-              transaction: trace
+    bhutan.eledger: debug
+    bhutan.eledger.application.service.eledger.transaction: trace
 
 bhutan:
   eledger:
