--- a/deployment/config/application.properties
+++ b/deployment/config/application.properties
@@ -10,5 +10,5 @@ server.tomcat.accesslog.suffix=.log
 server.tomcat.accesslog.prefix=access_log
 
 spring.datasource.url=jdbc:postgresql://postgres_db:5432/bu_eledger
-spring.datasource.username: bu_eledger
-spring.datasource.password: thepass
+spring.datasource.username= bu_eledger
+spring.datasource.password= thepass
