Log level, logs, Transactional.
Change-Id: I2b0e92d12343f61004b28d48ab2658500b64da33

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,8 +27,7 @@ server:
 logging:
   level:
     root: WARN
-    bhutan.eledger: debug
-    bhutan.eledger.application.service.eledger.transaction: trace
+    bhutan.eledger: trace
 
 bhutan:
   eledger:
