--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'com.jsunsoft.http:http-request:2.2.2'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.1.0'
+    implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
 
     testImplementation 'com.tngtech.archunit:archunit:0.22.0'
 
