--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: eledger
   datasource:
     url: jdbc:postgresql://localhost:5432/eledger
-    username: eledger
-    password: eledger
+    username: postgres
+    password: postgres
 
   jpa:
     open-in-view: true
